--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
 }
 
 .wrapper {
-    width: 1366px;
+    width: 1350px;
     margin: auto;
     height: auto;
 }
@@ -128,26 +128,32 @@ h1 {
 #conten .content {
     margin-top: 70px;
     color: #1f2225;
-    width: 1200px;
+    width: 1050px;
     /* height: 600px; */
     /* background: blue; */
     float: right;
 }
 
 #conten .con1 {
-    background: #bad7ee;
+    background: #cae3f7;
     padding-bottom: 20px;
 }
 
 #conten .con2 {
-    height: 199px;
-    background: #99abbb;
+    background: #9ebfdb;
     padding-bottom: 20px;
 }
 
+#conten .con3 {
+    background: #cae3f7;
+    height: 410px;
+    padding-bottom: 20px;
+}
+
+/* artikel */
 #conten .blog-content {
     float: left;
-    max-width: 500px;
+    width: 495px;
     margin-left: 20px;
 }
 
@@ -184,6 +190,52 @@ h1 {
     text-decoration: none;
 }
 
+#conten video {
+    margin: auto;
+    width: 1050px;
+}
+
+#conten object {
+    margin: auto;
+    width: 1050px;
+    height: 600px;
+}
+
+#conten .text_B {
+    width: 1050px;
+    text-align: center;
+    font-weight: bold;
+    font-size: 30px;
+    padding-top: 10px;
+    margin-bottom: 10px;
+}
+
+#conten .box-o {
+    float: left;
+    width: 495px;
+    margin-left: 20px;
+}
+
+#conten .box-o .img-o img {
+    display: block;
+    width: 100%;
+    height: 300px;
+    object-fit: cover;
+}
+
+#conten audio {
+    background: white;
+    width: 495px;
+}
+
+#conten .text_C {
+    width: 495px;
+    text-align: center;
+    font-weight: bold;
+    font-size: 30px;
+    padding-top: 10px;
+    margin-bottom: 10px;
+}
 
 /* footer */
 footer {
