--- a/style.css
+++ b/style.css
@@ -85,8 +85,22 @@ h1 {
     height: auto;
 }
 
+
+
 /* sidebar */
 #conten .sidebar {
+    text-align: center;
+    padding-top: 10px;
+    margin-top: 70px;
+    color: white;
+    width: 300px;
+    height: 300px;
+    background: #304563;
+    position: fixed;
+    /* float: left; */
+}
+
+#conten .sidebar2 {
     text-align: center;
     padding-top: 10px;
     margin-top: 70px;
@@ -223,6 +237,17 @@ h1 {
     object-fit: cover;
 }
 
+#conten .box-o .img-p {
+    position: relative;
+}
+
+#conten .box-o .img-p img {
+    display: block;
+    width: 100%;
+    height: 350px;
+    object-fit: cover;
+}
+
 #conten audio {
     background: white;
     width: 495px;
@@ -235,6 +260,43 @@ h1 {
     font-size: 30px;
     padding-top: 10px;
     margin-bottom: 10px;
+}
+
+#conten .box-o .overlay a {
+    padding: 80px;
+    margin-top: 20px;
+    color: rgb(216, 216, 216);
+    font-size: 60px;
+    font-weight: bold;
+    text-decoration: none;
+}
+
+#conten .box-o .overlay a:hover {
+    color: #ffffff;
+}
+
+#conten .blog-artikel {
+    margin: auto;
+    width: 900px;
+    padding-top: 20px;
+}
+
+/* bagian di folder artikel */
+#conten .blog-artikel .image-ar {
+    position: relative;
+}
+
+#conten .blog-artikel .image-ar img {
+    display: block;
+    margin-bottom: 20px;
+    width: 100%;
+    height: 500px;
+    object-fit: cover;
+}
+
+#conten .blog-artikel audio {
+    background: white;
+    width: 900px;
 }
 
 /* footer */
